Fixed extra space below the footer

--- a/upendo-frontend/src/App.css
+++ b/upendo-frontend/src/App.css
@@ -1,6 +1,12 @@
 html, body, #app, #app>div, #root {
-    height: 100%
+    height: 100vh;
+    width: 100vw;
   }
+
+body {
+  min-height: 100%;
+  overflow: hidden;
+}
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Bree Serif', serif;
