--- a/upendo-frontend/src/flows/beekeeper-flow/beekeeper-portrait.css
+++ b/upendo-frontend/src/flows/beekeeper-flow/beekeeper-portrait.css
@@ -1,10 +1,9 @@
 .beekeeperFlexContainer {
   display: grid;
   grid-template-columns: 1fr 2fr 2fr 1fr;
-  grid-template-rows: 1fr 1fr 2fr 1fr 1fr;
+  grid-template-rows: 1fr 3fr 1fr 1fr;
   grid-template-areas:
     "header header header header"
-    "leftArrow description portrait rightArrow"
     "leftArrow description portrait rightArrow"
     "leftArrow progress progress rightArrow"
     "footer footer footer footer";
