--- a/upendo-frontend/src/flows/menu.css
+++ b/upendo-frontend/src/flows/menu.css
@@ -2,7 +2,7 @@
 #menuPage {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 2fr 2fr 1fr;
+    grid-template-rows: 1fr 2fr 2fr auto;
     grid-template-areas:
         "header header header header header header header"
         ".icon1 . icon2 . logo ."
