--- a/upendo-frontend/src/modules/footer.css
+++ b/upendo-frontend/src/modules/footer.css
@@ -1,12 +1,12 @@
 .blackFooter{
   background-color: black;
   border-top: 10px solid  rgb(228, 181, 28);
-
-  bottom: 0px;
   height: 50px;
 
   align-self: stretch;
   position: relative;
+  bottom: 0;
+
 }
 
 .blackFooter::after {
@@ -18,12 +18,14 @@
   left: 0;
   bottom: 0;
   right: 0;
+  height: 100%;
+  width: 100%;
   position: absolute;
   opacity: 0.5;
 }
 
 .menuFooter {
-  height: 100px;
+  height: 50px;
 }
 
 
@@ -70,6 +72,10 @@
     padding-left: 200px;
     font-family: 'Bree Serif', serif;
     align-self: start;
+  }
+
+  .menuFooter {
+    height: 100px;
   }
   
   .movingBee {
